--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
 # mongodb://localhost:27017/
+
+# supratim
+# aWLMud8XX#F$Xcz
+
+
+# Local 
+# mongodb://localhost:27017/task-manager
+
+#Live
+MONGO_URI="mongodb+srv://supratim:<db_password>@cluster0.ogtoo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_PASS="aWLMud8XX#F$Xcz"
+#
